# typeslice

./: Cargo.toml  README.md  check.bash
examples/: named-args.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: gen.rs  lib.rs  utf8.rs
tests/: test.rs
