[package]
name = "typeslice"
version = "0.2.2"
edition = "2021"
description = "type-level slices"
license = "MIT OR Apache-2.0"
authors = ["Aatif Syed <aatif@aatifsyed.uk>"]
documentation = "https://docs.rs/typeslice"
homepage = "https://github.com/aatifsyed/typeslice"
repository = "https://github.com/aatifsyed/typeslice"
categories = ["no-std", "compilers", "data-structures"]

[dependencies]
typeslice-macros = { path = "macros", optional = true, version = "0.1.1" }

[dev-dependencies]
itertools = { version = "0.12.1", default-features = false }
static_assertions = "1.1.0"

[features]
std = []
default = ["std", "macros"]
macros = ["dep:typeslice-macros"]

[workspace]
members = ["macros"]
